# LearnOpenGL

./: CMakeLists.txt
include/glad/: glad.h
include/learnopengl/: shader_s.h
resources/shader/: b.vert
src/: glad.c  image_impl.cpp  main.cpp  shader_s.cpp
